--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,5 @@ python = "^3.11"
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core",""]
 build-backend = "poetry.core.masonry.api"
