tempts to add icons to toolbar

--- a/assets/pengui.desktop
+++ b/assets/pengui.desktop
@@ -4,7 +4,7 @@ Categories=GNOME;GTK;Utility;
 Comment=penGUI take cure about the eggs!
 Encoding=UTF-8
 Exec=/opt/pengui/pengui.bin
-GenericName=Penguins' eggs
+GenericName=PenGUI
 Icon=pengui
 Name=penGUI
 Type=Application
